--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
     <nav>
         <div class="left-nav">
-            <div class="logo">
+            <span class="logo">
                 <i class="fa-solid fa-check-double"></i>
-            </div>
+            </span>
             <div class="Jobpasscard">Job Passcard</div>
         </div>
         <div class="mid-nav">
@@ -22,12 +22,12 @@
             <div>Profile</div>
         </div>
         <div class="right-nav">
-            <div class="search-icon">
+            <span class="search-icon">
                 <i class="fa-solid fa-magnifying-glass"></i>
-            </div> 
-            <div class="cart-icon">
+            </span> 
+            <span class="cart-icon">
                 <i class="fa-solid fa-cart-shopping"></i>
-            </div>
+            </span>
             <div class="login-tab">Login</div>
             <div class="Signup-tab">Sign up</div>
         </div>
@@ -35,8 +35,56 @@
     <header><h2>My Cart</h2></header>
     <main>
         <div class="items-box">
-            <div class="items-card"></div>
-            <div class="items-card"></div>
+            <div class="items-card">
+                <span class="del-icon">
+                    <i class="fa-regular fa-trash-can">
+                    </i>
+                </span>
+                <div class="item-img">
+                    <img src="https://picsum.photos/150" alt="">
+                </div>
+                <div class="item-detail">
+                    <div class="rating-box">
+                        <p>Google Docs</p>
+                        <div class="stars-box">
+                            <span class="star-icon1"><i class="fa-sharp fa-solid fa-star"></i></span>
+                            <span class="star-icon2"><i class="fa-sharp fa-regular fa-star"></i></span>
+                            <span class="star-icon3"><i class="fa-sharp fa-regular fa-star"></i></span>
+                            <select>
+                                <option value="" selected disabled hidden>lv 1-3</option>
+                                <option value="1">lv1</option>
+                                <option value="2">lv2</option>
+                                <option value="3">lv3</option>
+                        </div>
+                    </div>
+                    <p class="price">THB 150</p>
+                </div>
+            </div>
+            <div class="items-card">
+                <span class="del-icon">
+                    <i class="fa-regular fa-trash-can">
+                    </i>
+                </span>
+                <div class="item-img">
+                    <img src="https://picsum.photos/150" alt="">
+                </div>
+                <div class="item-detail">
+                    <div class="rating-box">
+                        <p>Google Docs</p>
+                        <div class="stars-box">
+                            <span class="star-icon1"><i class="fa-sharp fa-solid fa-star"></i></span>
+                            <span class="star-icon2"><i class="fa-sharp fa-regular fa-star"></i></span>
+                            <span class="star-icon3"><i class="fa-sharp fa-regular fa-star"></i></span>
+                            <select>
+                                <option value="" selected disabled hidden>lv 1-3</option>
+                                <option value="1">lv1</option>
+                                <option value="2">lv2</option>
+                                <option value="3">lv3</option>
+                        </div>
+                    </div>
+                    <p class="price">THB 150</p>
+                </div>
+            </div>
         </div>
         <form class="order-form">
             <p class="order-info">Order Info</p>
@@ -46,9 +94,9 @@
                 <p class="subtotal-num">THB 300</p>
             </div>
             <div class="promotioncode-box">
-                <div class="keyboard-icon">
+                <span class="keyboard-icon">
                     <i class="fa-regular fa-keyboard"></i>
-                </div>
+                </span>
                 <input type="text" class="text" placeholder="Promotion code">
                 <button type="button" class="apply-btn">Apply</button>
             </div>
