--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <div class="payment-box">
                 <p class="payment-text">Total payment</p>
                 <p class="payment-num">THB 300</p>
-                <input type="submit" class="login-btn">
+                <input type="submit" class="login-btn" value="LONGIN TO CHECKOUT">
             </div>
         </form>
     </main>
