--- a/index.html
+++ b/index.html
@@ -52,9 +52,10 @@
                             <span class="star-icon3"><i class="fa-sharp fa-regular fa-star"></i></span>
                             <select>
                                 <option value="" selected disabled hidden>lv 1-3</option>
-                                <option value="1">lv1</option>
-                                <option value="2">lv2</option>
-                                <option value="3">lv3</option>
+                                <option value="lv1">lv1</option>
+                                <option value="lv2">lv2</option>
+                                <option value="lv3">lv3</option>
+                            </select>
                         </div>
                     </div>
                     <p class="price">THB 150</p>
@@ -77,9 +78,10 @@
                             <span class="star-icon3"><i class="fa-sharp fa-regular fa-star"></i></span>
                             <select>
                                 <option value="" selected disabled hidden>lv 1-3</option>
-                                <option value="1">lv1</option>
-                                <option value="2">lv2</option>
-                                <option value="3">lv3</option>
+                                <option value="lv1">lv1</option>
+                                <option value="lv2">lv2</option>
+                                <option value="lv3">lv3</option>
+                            </select>
                         </div>
                     </div>
                     <p class="price">THB 150</p>
