All done except trashcan icon border

--- a/index.html
+++ b/index.html
@@ -36,12 +36,11 @@
     <main>
         <div class="items-box">
             <div class="items-card">
-                <span class="del-icon">
+                <span class="trash-icon">
                     <i class="fa-regular fa-trash-can">
                     </i>
                 </span>
                 <div class="item-img">
-                    <img src="https://picsum.photos/150" alt="">
                 </div>
                 <div class="item-detail">
                     <div class="rating-box">
@@ -62,12 +61,11 @@
                 </div>
             </div>
             <div class="items-card">
-                <span class="del-icon">
+                <span class="trash-icon">
                     <i class="fa-regular fa-trash-can">
                     </i>
                 </span>
                 <div class="item-img">
-                    <img src="https://picsum.photos/150" alt="">
                 </div>
                 <div class="item-detail">
                     <div class="rating-box">
@@ -91,10 +89,12 @@
         <form class="order-form">
             <p class="order-info">Order Info</p>
             <br>
+            <br>
             <div class="subtotal-box">
                 <p class="subtotal-text">Subtotal</p>
                 <p class="subtotal-num">THB 300</p>
             </div>
+            <br>
             <div class="promotioncode-box">
                 <span class="keyboard-icon">
                     <i class="fa-regular fa-keyboard"></i>
@@ -102,13 +102,16 @@
                 <input type="text" class="text" placeholder="Promotion code">
                 <button type="button" class="apply-btn">Apply</button>
             </div>
+            <br>
             <hr>
+            <br>
             <br>
             <div class="payment-box">
                 <p class="payment-text">Total payment</p>
                 <p class="payment-num">THB 300</p>
-                <input type="submit" class="login-btn" value="LONGIN TO CHECKOUT">
             </div>
+            <br>
+            <input type="submit" class="login-btn" value="LONGIN TO CHECKOUT">
         </form>
     </main>
 </body>
