Add detail in google docs image

--- a/index.html
+++ b/index.html
@@ -1,118 +1,144 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Cart</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+      integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
     <nav>
-        <div class="left-nav">
-            <span class="logo">
-                <i class="fa-solid fa-check-double"></i>
-            </span>
-            <div class="Jobpasscard">Job Passcard</div>
-        </div>
-        <div class="mid-nav">
-            <div>About Us</div>
-            <div>Passcard</div>
-            <div>Profile</div>
-        </div>
-        <div class="right-nav">
-            <span class="search-icon">
-                <i class="fa-solid fa-magnifying-glass"></i>
-            </span> 
-            <span class="cart-icon">
-                <i class="fa-solid fa-cart-shopping"></i>
-            </span>
-            <div class="login-tab">Login</div>
-            <div class="Signup-tab">Sign up</div>
-        </div>
+      <div class="left-nav">
+        <span class="logo">
+          <i class="fa-solid fa-check-double"></i>
+        </span>
+        <div class="Jobpasscard">Job Passcard</div>
+      </div>
+      <div class="mid-nav">
+        <div>About Us</div>
+        <div>Passcard</div>
+        <div>Profile</div>
+      </div>
+      <div class="right-nav">
+        <span class="search-icon">
+          <i class="fa-solid fa-magnifying-glass"></i>
+        </span>
+        <span class="cart-icon">
+          <i class="fa-solid fa-cart-shopping"></i>
+        </span>
+        <div class="login-tab">Login</div>
+        <div class="Signup-tab">Sign up</div>
+      </div>
     </nav>
     <header><h2>My Cart</h2></header>
     <main>
-        <div class="items-box">
-            <div class="items-card">
-                <span class="trash-icon">
-                    <i class="fa-regular fa-trash-can">
-                    </i>
-                </span>
-                <div class="item-img">
-                </div>
-                <div class="item-detail">
-                    <div class="rating-box">
-                        <p>Google Docs</p>
-                        <div class="stars-box">
-                            <span class="star-icon1"><i class="fa-sharp fa-solid fa-star"></i></span>
-                            <span class="star-icon2"><i class="fa-sharp fa-regular fa-star"></i></span>
-                            <span class="star-icon3"><i class="fa-sharp fa-regular fa-star"></i></span>
-                            <select>
-                                <option value="" selected disabled hidden>lv 1-3</option>
-                                <option value="lv1">lv1</option>
-                                <option value="lv2">lv2</option>
-                                <option value="lv3">lv3</option>
-                            </select>
-                        </div>
-                    </div>
-                    <p class="price">THB 150</p>
-                </div>
+      <div class="items-box">
+        <div class="items-card">
+          <span class="trash-icon">
+            <i class="fa-regular fa-trash-can"> </i>
+          </span>
+          <div class="item-img">
+            <span>
+              <i class="fa-regular fa-file"></i>
+            </span>
+            <h3>Google Docs</h3>
+            <p>Used for business</p>
+          </div>
+          <div class="item-detail">
+            <div class="rating-box">
+              <p>Google Docs</p>
+              <div class="stars-box">
+                <span class="star-icon1"
+                  ><i class="fa-sharp fa-solid fa-star"></i
+                ></span>
+                <span class="star-icon2"
+                  ><i class="fa-sharp fa-regular fa-star"></i
+                ></span>
+                <span class="star-icon3"
+                  ><i class="fa-sharp fa-regular fa-star"></i
+                ></span>
+                <select>
+                  <option value="" selected disabled hidden>lv 1-3</option>
+                  <option value="lv1">lv1</option>
+                  <option value="lv2">lv2</option>
+                  <option value="lv3">lv3</option>
+                </select>
+              </div>
             </div>
-            <div class="items-card">
-                <span class="trash-icon">
-                    <i class="fa-regular fa-trash-can">
-                    </i>
-                </span>
-                <div class="item-img">
-                </div>
-                <div class="item-detail">
-                    <div class="rating-box">
-                        <p>Google Docs</p>
-                        <div class="stars-box">
-                            <span class="star-icon1"><i class="fa-sharp fa-solid fa-star"></i></span>
-                            <span class="star-icon2"><i class="fa-sharp fa-regular fa-star"></i></span>
-                            <span class="star-icon3"><i class="fa-sharp fa-regular fa-star"></i></span>
-                            <select>
-                                <option value="" selected disabled hidden>lv 1-3</option>
-                                <option value="lv1">lv1</option>
-                                <option value="lv2">lv2</option>
-                                <option value="lv3">lv3</option>
-                            </select>
-                        </div>
-                    </div>
-                    <p class="price">THB 150</p>
-                </div>
-            </div>
+            <p class="price">THB 150</p>
+          </div>
         </div>
-        <form class="order-form">
-            <p class="order-info">Order Info</p>
-            <br>
-            <br>
-            <div class="subtotal-box">
-                <p class="subtotal-text">Subtotal</p>
-                <p class="subtotal-num">THB 300</p>
+        <div class="items-card">
+          <span class="trash-icon">
+            <i class="fa-regular fa-trash-can"> </i>
+          </span>
+          <div class="item-img">
+            <span>
+              <i class="fa-regular fa-file"></i>
+            </span>
+            <h3>Google Docs</h3>
+            <p>Used for business</p>
+          </div>
+          <div class="item-detail">
+            <div class="rating-box">
+              <p>Google Docs</p>
+              <div class="stars-box">
+                <span class="star-icon1"
+                  ><i class="fa-sharp fa-solid fa-star"></i
+                ></span>
+                <span class="star-icon2"
+                  ><i class="fa-sharp fa-regular fa-star"></i
+                ></span>
+                <span class="star-icon3"
+                  ><i class="fa-sharp fa-regular fa-star"></i
+                ></span>
+                <select>
+                  <option value="" selected disabled hidden>lv 1-3</option>
+                  <option value="lv1">lv1</option>
+                  <option value="lv2">lv2</option>
+                  <option value="lv3">lv3</option>
+                </select>
+              </div>
             </div>
-            <br>
-            <div class="promotioncode-box">
-                <span class="keyboard-icon">
-                    <i class="fa-regular fa-keyboard"></i>
-                </span>
-                <input type="text" class="text" placeholder="Promotion code">
-                <button type="button" class="apply-btn">Apply</button>
-            </div>
-            <br>
-            <hr>
-            <br>
-            <br>
-            <div class="payment-box">
-                <p class="payment-text">Total payment</p>
-                <p class="payment-num">THB 300</p>
-            </div>
-            <br>
-            <input type="submit" class="login-btn" value="LONGIN TO CHECKOUT">
-        </form>
+            <p class="price">THB 150</p>
+          </div>
+        </div>
+      </div>
+      <form class="order-form">
+        <p class="order-info">Order Info</p>
+        <br />
+        <br />
+        <div class="subtotal-box">
+          <p class="subtotal-text">Subtotal</p>
+          <p class="subtotal-num">THB 300</p>
+        </div>
+        <br />
+        <div class="promotioncode-box">
+          <span class="keyboard-icon">
+            <i class="fa-regular fa-keyboard"></i>
+          </span>
+          <input type="text" class="text" placeholder="Promotion code" />
+          <button type="button" class="apply-btn">Apply</button>
+        </div>
+        <br />
+        <hr />
+        <br />
+        <br />
+        <div class="payment-box">
+          <p class="payment-text">Total payment</p>
+          <p class="payment-num">THB 300</p>
+        </div>
+        <br />
+        <input type="submit" class="login-btn" value="LONGIN TO CHECKOUT" />
+      </form>
     </main>
-</body>
+  </body>
 </html>
